Fixed horizontal alignment of contact anchor

--- a/styles.css
+++ b/styles.css
@@ -223,8 +223,8 @@ hr {
 
   #contact {
     position: absolute;
-    top: 0.65rem;
-    left: 33.4vh;
+    top: 0.62rem;
+    left: 72vw;
   }
 
   #menu-button {
